--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "type": "module",
   "scripts": {
-    "start": "vite"
+    "start": "vite --host 0.0.0.0"
   },
   "dependencies": {
     "chart.js": "^4.0.0",
